do some cleanup

--- a/thread_pool/copy/Makefile
+++ b/thread_pool/copy/Makefile
@@ -1,13 +1,13 @@
 CC = gcc
 CFLAGS = -O0 -Wall -g -lpthread
 
-debug:copy.c thread_pool.c
-	$(CC) $^ -o $@ $(CFLAGS) -DDEBUG
-
 copy:copy.c thread_pool.c
 	$(CC) $^ -o $@ $(CFLAGS) -DNDEBUG
 
+debug:copy.c thread_pool.c
+	$(CC) $^ -o $@ $(CFLAGS) -DDEBUG
+
 clean:
-	$(RM) .*.sw? copy debug *.o
+	$(RM) .*.sw? copy debug *.o bk -rf
 
 .PHONY:all clean
