修改了可执行文件的扩展名，以便于.gitignore可以识别

--- a/tpool/copy/Makefile
+++ b/tpool/copy/Makefile
@@ -1,13 +1,13 @@
 CC = gcc
 CFLAGS = -O0 -Wall -g -lpthread
 
-copy:copy.c thread_pool.c
+copy.out:copy.c thread_pool.c
 	$(CC) $^ -o $@ $(CFLAGS) -DNDEBUG
 
-debug:copy.c thread_pool.c
+debug.out:copy.c thread_pool.c
 	$(CC) $^ -o $@ $(CFLAGS) -DDEBUG
 
 clean:
-	$(RM) .*.sw? copy debug *.o bk -rf
+	$(RM) .*.sw? copy.out debug.out *.o bk -rf
 
 .PHONY:all clean
