--- a/weather/Makefile
+++ b/weather/Makefile
@@ -13,14 +13,14 @@ LDFLAGS += -lcjson
 LDFLAGS += -Wl,-rpath=./cJSON
 
 
-weather.out:$(SRC)
+weather.elf:$(SRC)
 	$(CC) $^ -o $@ $(CPPFLAGS) $(LDFLAGS) -DNDEBUG
 
-debug.out:$(SRC)
+debug.elf:$(SRC)
 	$(CC) $^ -o $@ $(CPPFLAGS) $(LDFLAGS) -DDEBUG
 
 clean:
-	$(RM) *.out
+	$(RM) *.elf
 
 distclean:clean
 	$(RM) core .*.sw? *.html
