修改了希尔排序

--- a/algorithm/6_sort/Makefile
+++ b/algorithm/6_sort/Makefile
@@ -1,5 +1,5 @@
 SRC = $(wildcard *.c)
-ELF = $(SRC:%.c=%)
+ELF = $(SRC:%.c=%.elf)
 
 #CROSS = arm-none-linux-gnueabi-
 CC = $(CROSS)gcc
@@ -8,7 +8,7 @@ LDFLAGS += -lm
 
 all:$(ELF)
 
-$(ELF):%:%.c
+$(ELF):%.elf:%.c
 	$(CC) $^ -o $@ $(LDFLAGS)
 
 clean:
