--- a/algorithm/4_tree/red-black/Makefile
+++ b/algorithm/4_tree/red-black/Makefile
@@ -1,6 +1,6 @@
-SRC += ../drawtree.c
-SRC += ../travel.c
-SRC += ../queue.c
+SRC += drawtree.c
+SRC += travel.c
+SRC += queue.c
 
 SRC += rb_common.c
 SRC += rb_delete.c
