修改了SQLite的C语言实例

--- a/SQLite/Makefile
+++ b/SQLite/Makefile
@@ -6,8 +6,11 @@ LDFLAGS += -lpthread
 LDFLAGS += -ldl
 LDFLAGS += -Wl,-rpath=./lib 
 
-demo:demo.c wrap.c
+demo:demo.c wrap.c lib/libsqlite3.so
 	$(CC) $^ -o $@ $(CPPFLAGS) $(LDFLAGS)
+
+lib/libsqlite3.so:
+	$(MAKE) -C lib
 
 clean:
 	$(RM) demo
